<resources>
    <string name="app_name">Best things</string>
    <string name="button_addNewRecord">Show My Records</string>
    <string name="button_add">Add Record</string>
    <string name="hint_type">Label/Type</string>
    <string name="hint_description">Description</string>
    <string name="hint_date">Click to Select Date</string>
    <string name="hint_total">Total Amount</string>
    <string name="menu_addrecord">Add Record</string>
    <string name="welcome">Welcome to use Zihao Best things</string>
    <string name="menu_cancel">Cancel</string>
    <string name="enter_accountbook_title">Please enter a Label of a Record!</string>
    <string name="save_record">Save Record</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_image">Select Imgae</string>
    <string name="change_image">Change Image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_deleteRecord">Delete</string>
</resources>
